minor ui change

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GA4 Team Chat — Analytics Intelligence</title>
+  <title>Financing — Analytics Chat</title>
   <link rel="icon" type="image/png" href="favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -652,7 +652,7 @@
         <div class="logo-icon" style="margin: 0 auto 12px; width: 48px; height: 48px; font-size: 24px; padding: 10px;">
           <img src="logo.svg" alt="GA4 Logo" />
         </div>
-        <h2>GA4 Team Chat</h2>
+        <h2>Financing Analytics Chat</h2>
         <p>Enter your team access token to continue</p>
         <input
           class="auth-input"
